# Calculator_for_IT

./: CMakeLists.txt  Calc_for_ele_project.sln  Calc_for_ele_project.vcxproj  Calc_for_ele_project.vcxproj.filters  Calc_for_ele_projectDlg.cpp  Calc_for_ele_projectDlg.h  Calcforeleproject.aps  Calcforeleproject.rc  Conversions.cpp  README.md  framework.h  pch.h  resource.h
Gtest/G_Test_Conversions/: G_Test_Conversions.vcxproj  Test_Con.cpp  Test_Con.h  test.cpp
Gtest/G_Test_Conversions/x64/Debug/: G_Test_Conversions.exe.recipe  G_Test_Conversions.pch  (+1 more)
build_win/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Calc_for_ele_project_cmake.sln  Calc_for_ele_project_cmake.vcxproj  Calc_for_ele_project_cmake.vcxproj.filters  README_CMake.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_win/Calc_for_ele_project_cmake.dir/Debug/: Calc_for_ele_project_cmake.exe.recipe  Calc_for_ele_project_cmake.ilk  Calcforeleproject.res
include/: Calc_for_ele_project.h  Conversions.h
res/: Calcforeleproject.aps  Calcforeleproject.rc  Calcforeleproject.rc2  resource.h
src/: Calc_for_ele_project.cpp
x64/Debug/: Calc_for_ele_project.exe.recipe  Calc_for_ele_project.ilk  Calc_for_ele_project.pch  Calc_for_ele_project.vcxproj.FileListAbsolute.txt  Calcforeleproject.res  vc143.idb
x64/Debug/Calc_for.F6462BC3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Calc_for_ele_project.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
(+28 files in other folders)
